--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ decorator==5.0.7
 defusedxml==0.7.1
 entrypoints==0.3
 fsspec==2021.4.0
-idna==3.1
+idna
 ipykernel==5.5.4
 ipython==7.23.1
 ipython-genutils==0.2.0
